opsiconfd (4.0.2.5-1) testing; urgency=low

  * ressource: webstart jnlp build fixed for arguments.

 -- Erol Ueluekmen <e.ueluekmen@uib.de>  Thu, 10 Jan 2013 11:15:56 +0100

opsiconfd (4.0.2.4-1) stable; urgency=low

  * added readOnly-State in session and worker

 -- Erol Ueluekmen <e.ueluekmen@uib.de>  Thu, 04 Oct 2012 11:18:36 +0200

opsiconfd (4.0.2.3-1) testing; urgency=low

  * fixing floatdivision in statistics-class

 -- Erol Ueluekmen <e.ueluekmen@uib.de>  Wed, 18 Jul 2012 17:05:54 +0200

opsiconfd (4.0.2.2-1) testing; urgency=low

  * omb: python 2.4 fixing import hashlib
  * fixing init.d lsb-header for SUSE based servers. Removing runlevel 4

 -- Erol Ueluekmen <e.euluekmen@uib.de>  Fri, 22 Jun 2012 15:06:59 +0200

opsiconfd (4.0.2.1-1) stable; urgency=low

  * Featurepack-Release 4.0.2

 -- Erol Ueluekmen <e.ueluekmen@uib.de>  Wed, 30 May 2012 11:28:44 +0200

opsiconfd (4.0.1.12-1) testing; urgency=low

  * opsi-nagios-connector:
    * fix check-depotsyncstatus-longoutput for more then two depotservers in one check
    * checkProductStatus: change Statechange from critical to warning when only versions are different on clients 
    * fix checkClientStatus: determining last seen

 -- Erol Ueluekmen <e.ueluekmen@uib.de>  Thu, 10 May 2012 01:19:20 +0200

opsiconfd (4.0.1.11-1) testing; urgency=low

  * first release of opsi-nagios-connector

 -- Erol Ueluekmen <e.ueluekmen@uib.de>  Sun, 28 Feb 2012 23:37:46 +0100

opsiconfd (4.0.1.10-1) stable; urgency=low

  * Require rrdtool-python instead of python-rrdtool on rhel centos and fedora
  * opsi message bus
    * Create message bus socket dir in init script
  * Fix pid file handling

 -- Erol Ueluekmen <e.ueluekmen@uib.de>  Thu, 19 Jan 2012 14:12:42 +0200

opsiconfd (4.0.1.9-4) stable; urgency=low

  * Fix init script for restart

 -- Jan Schneider <j.schneider@uib.de>  Thu, 08 Sep 2011 16:03:36 +0200

opsiconfd (4.0.1.9-3) stable; urgency=low

  * Fix init script
