@@ -140,6 +140,16 @@
 	#   monitoring user = monitoring
 
 	monitoring user = monitoring
+	
+	# Monitoring Debug switch. If switch is not true, monitoring 
+	# will not be logged.
+	# If the switch is true, the global loglevel from opsiconfd is 
+	# used for logging monitoring
+	#
+	# Default:
+	#   monitoring debug = false
+	
+	 monitoring debug = false
 
 ; - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 ; -     service settings                                                -
